--- a/web_flask/static/styles/3-footer.css
+++ b/web_flask/static/styles/3-footer.css
@@ -1,11 +1,12 @@
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
+    color: white;
     height: 60px;
-    border-top: 1px solid #CCCCCC;
+    bottom:0;
+    position: absolute;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top: 1px solid  #CCCCCC;
+    box-sizing: border-box;
 }
