--- a/web_flask/static/styles/3-header.css
+++ b/web_flask/static/styles/3-header.css
@@ -1,15 +1,7 @@
 header {
-    width: 100%;
-    background-color: white;
+    color: white;
     height: 70px;
+    width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    width: 142px;
-    height: 60px;
-    background: url("../images/logo.png") no-repeat center;
-    padding-left: 20px;
+    background: url("../images/logo.png") no-repeat;
 }
