--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,91 +1,89 @@
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+	position: relative;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+  background-color: white;
 }
 
-section.filters > button{
-    font-size: 18px;
-    color: white;
-    background-color: #FF5A5F;
-    height: 48px;
-    border: 0px;
-    border-radius: 4px;
-    width: 20%;
-    margin-left: auto;
-    margin-right: 30px;
-    opacity: 1;
+.filters button {
+  font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	border-radius: 4px;
+	height: 48px;
+	width: 20%;
+	right: 30px;
+	top: 0.688rem;
+  position: absolute;
+	display: inline-block;
+  border: none;
 }
 
-section.filters > button:hover {
-    opacity: 0.9;
+.filters ul {
+	list-style: none;
 }
 
-.locations, .amenities {
-    height: 100%;
-    width: 25%;
-    padding-left: 50px;
+.amenities, .locations {
+	display: inline-block;
+	height: 100%;
+	width: 25%;
 }
 
-.locations {
-    border-right: 1px solid #DDDDDD;
-}
-.locations > h3, .amenities > h3 {
-    font-weight: 600;
-    margin: 12px 0 5px 0;
+.filters > .locations {
+	border-right: 1px solid #DDDDDD;
 }
 
-.locations > h4, .amenities > h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 0 0 5px 0;
+.locations h3, .amenities h3 {
+	font-weight: 600;
 }
 
-.popover {
-    display: none;
-    position: relative;
-    left: -51px;
-    background-color: #FAFAFA;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    z-index: 1;
-    padding: 30px 50px 30px 0;
-    margin-top: 17px;
+.locations h4, .amenities h4 {
+	font-weight: 400;
+	font-size: 14px;
 }
 
-.popover, .popover ul {
-    list-style-type: none;
-}
-.locations:hover > .popover {
-    display: block;
+.locations h3,
+.locations h4, 
+.amenities h3, 
+.amenities h4 {
+	margin: 0;
+	margin-top: 0.625rem;
+	margin-left: 2.5rem;
 }
 
-.amenities:hover > .popover {
-    display: block;
+.popover li {
+	margin-top: 0.313rem;
 }
 
 .popover h2 {
-    margin-top: 0px;
-    margin-bottom: 5px;
+	font-size: 16px;
+	margin: 0;
+	margin-top: 0.688rem;
 }
 
-.locations > .popover > li {
-    margin-bottom: 30px;
-    margin-left: 30px;
-}
-.locations > .popover > li > ul {
-    padding-left: 20px;
-}
-.locations > .popover > li > ul > li {
-    margin-bottom: 10px;
+.locations .popover,
+.amenities .popover {
+	margin: 0;
+	display: none;
+	position: absolute;
+	background-color: #FAFAFA;
+	width: 25%;
+	top: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
 }
 
-.amenities > .popover > li {
-    margin-left: 50px;
-    margin-bottom: 10px;
+.locations .popover {
+	left: -0.063rem;
+}
+
+.amenities .popover {
+	left: 25%;
+}
+
+.locations:hover .popover,
+.amenities:hover .popover {
+	display: block;
 }
