--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>OA
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="icon" href="images/icon.png" type="image/png">
+
     <title>AirBnb Clone</title>
   </head>
   <body>
