--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        <H1>States</H1>
-        <UL>
-        {% for state in states %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-        {% endfor %}
-        </UL>
-    </BODY>
-</HTML>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>HBNB</title>
+</head>
+<body>
+	<h1>States</h1>
+	<ul>
+		{% for state in states.values()|sort(attribute='name') %}
+      <li>State {{ state.id }}: <B>{{ state.name }}</B></lI>
+    {% endfor %}
+	</ul>
+</body>
+</html>
