--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        <H1>States</H1>
-        <UL>
-        {% for state in states|sort(attribute='name') %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B>
-	        <UL>
-	        {% for city in state.cities|sort(attribute='name') %}
-	            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-	        {% endfor %}
-	        </UL>
-	    </LI>
-        {% endfor %}
-        </UL>
-    </BODY>
-</HTML>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>HBNB</title>
+</head>
+<body>
+	<h1>States</h1>
+	<ul>
+		{% for state in states|sort(attribute='name') %}
+      <li>{{ state.id }}: <b>{{ state.name }}</b>
+				<ul>
+					{% for city in state.cities|sort(attribute='name') %}
+						<li>{{ city.id }}: <b>{{ city.name }}</b></li>
+					{% endfor %}
+				</ul>
+			</li>
+    {% endfor %}
+	</ul>
+</body>
+</html>
