--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        {% if not state_id %}
-            <H1>States</H1>
-	    <UL>
-	        {% for state in states.values()|sort(attribute='name') %}
-		    <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-		{% endfor %}
-	    </UL>
-	{% elif state_id in states%}
-	    {% set state = states[state_id] %}
-	        <H1>State: {{ state.name }}</H1>
-		<H3>Cities</H3>
-		    <UL>
-			{% for city in state.cities|sort(attribute='name') %}
-                            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                        {% endfor %}
-		    </UL>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>HBNB</title>
+</head>
+<body>
+	<!-- for the states route -->
+	{% if states is defined %}
+		<h1>States</h1>
+		<ul>
+			{% for state in states.values()|sort(attribute='name') %}
+				<li>{{ state.id }}: <b>{{ state.name }}</b></li>
+			{% endfor %}
+		</ul>
+	<!-- for the /states/<id> route -->
 	{% else %}
-	    <H1>Not found!</H1>
+		<!-- id is not found -->
+		{% if state is none %}
+			<h1>Not found!</h1>
+		<!-- id is found -->
+		{% else %}
+			<h1>State: {{ state.name }}</h1>
+			<h3>Cities:</h3>
+			<ul>
+			{% for city in state.cities|sort(attribute='name') %}
+				<li>{{ city.id }}: <b>{{ city.name }}</b></li>
+			{% endfor %}
+			</ul>
+		{% endif %}
 	{% endif %}
-    </BODY>
-</HTML>
+</body>
+</html>
