--- a/web_flask/static/styles/4-common.css
+++ b/web_flask/static/styles/4-common.css
@@ -1,18 +1,13 @@
 body {
-	margin: 0;
-	padding: 0;
-        color: #484848;
-        font-size: 14px;
-        font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	margin:0px;
+	padding:0px;
+
+	color: #484848;
+	font-size: 14px;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-body .container {
-                   max-width: 1000px;
-                   margin:30px auto;
-                   padding-bottom: 3.75rem;
-}
-
-body .page-container {
-                        position: relative;
-			min-height: 100vh;
+.container {
+    max-width: 1000px;
+    margin: 30px auto;
 }
