--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,89 +1,104 @@
 .filters {
-	position: relative;
+	display: block;
+	background-color: white;
 	height: 70px;
 	width: 100%;
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
-  background-color: white;
 }
 
-.filters button {
-  font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
-	border-radius: 4px;
-	height: 48px;
-	width: 20%;
-	right: 30px;
-	top: 0.688rem;
-  position: absolute;
-	display: inline-block;
-  border: none;
-}
-
-.filters ul {
-	list-style: none;
-}
-
-.amenities, .locations {
-	display: inline-block;
+.locations {
+	display: inline;
+	vertical-align: middle;
+	float: left;
 	height: 100%;
 	width: 25%;
-}
 
-.filters > .locations {
+	line-height: 20px;
 	border-right: 1px solid #DDDDDD;
 }
 
-.locations h3, .amenities h3 {
-	font-weight: 600;
+.filter_amenities {
+	display: inline;
+	vertical-align: middle;
+	height: 100%;
+	float: left;
+    width: 25%;
+
+	line-height: 20px;
 }
 
-.locations h4, .amenities h4 {
-	font-weight: 400;
-	font-size: 14px;
-}
-
-.locations h3,
-.locations h4, 
-.amenities h3, 
-.amenities h4 {
-	margin: 0;
-	margin-top: 0.625rem;
-	margin-left: 2.5rem;
-}
-
-.popover li {
-	margin-top: 0.313rem;
-}
-
-.popover h2 {
-	font-size: 16px;
-	margin: 0;
-	margin-top: 0.688rem;
-}
-
-.locations .popover,
-.amenities .popover {
-	margin: 0;
+.popover {
+	list-style-type: none;
 	display: none;
-	position: absolute;
 	background-color: #FAFAFA;
-	width: 25%;
-	top: 100%;
+	width: 100%;
+
+	margin-left: -1px;
+	margin-top: 8px;
+	padding: 25px 0px;
+
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
+    /* additions */
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
-.locations .popover {
-	left: -0.063rem;
+.locations:hover .popover {
+	display: inline-block;
 }
 
-.amenities .popover {
-	left: 25%;
+.filter_amenities:hover .popover {
+	display: inline-block;
 }
 
-.locations:hover .popover,
-.amenities:hover .popover {
-	display: block;
+ul {
+	list-style-type: none;
+	padding: 0px;
+	padding-bottom: 20px;
+}
+
+li {
+}	
+
+h2 {
+	font-size: 16px;
+	padding-left: 30px;
+	margin: 0px;
+}
+
+h3 {
+	font-weight: 600;
+	margin-top: 12px;
+	margin-bottom: 5px;	
+	padding-left: 45px;
+}
+
+h4 {
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	padding-left: 45px;
+}
+
+button {
+	color: #FFFFFF;
+	font-size: 18px;
+	
+	height: 48px;
+	width: 20%;
+	background-color: #FF5A5F;
+	border-style: none;
+	border-radius: 4px;
+
+	float: right;
+	margin-top: 11px;
+	margin-bottom: 11px;
+	margin-right: 30px;
+}
+
+button:hover {
+	opacity: 90%;
 }
