--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HBNB</title>
-</head>
-<body>
-	<h1>States</h1>
-	<ul>
-		{% for state in states.values()|sort(attribute='name') %}
-      <li>State {{ state.id }}: <b>{{ state.name }}</b></li>
+<HTML lang="en">
+<HEAD>
+	<TITLE>HBNB</TITLE>
+</HEAD>
+<BODY>
+	<H1>States</H1>
+	<UL>
+		{% for state in states %}
+      <LI>State {{ state.id }}: <B>{{ state.name }}</B></LI>
     {% endfor %}
-	</ul>
-</body>
-</html>
+	</UL>
+</BODY>
+</HTML>
