--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -7,8 +7,8 @@
         {% if state is mapping %}
             <H1>States</H1>
 	    <UL>
-	        {% for s in states.values()|sort(attribute="name") %}
-		    <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+	        {% for state in states.values()|sort(attribute="name") %}
+		    <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
 		{% endfor %}
 	    </UL>
 	{% elif state is defined %}
