--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -5,11 +5,11 @@
     <META name="viewport" content="width=device-width, initial-scale=1">
     <TITLE>HBnB</TITLE>
     <LINK rel="stylesheet" href="../static/styles/reset.css">
-    <LINK rel="stylesheet" href="../static/styles/103-common.css">
-    <LINK rel="stylesheet" href="../static/styles/103-header.css">
-    <LINK rel="stylesheet" href="../static/styles/103-footer.css">
-    <LINK rel="stylesheet" href="../static/styles/103-filters.css">
-    <LINK rel="stylesheet" href="../static/styles/103-places.css">
+    <LINK rel="stylesheet" href="../static/styles/4-common.css">
+    <LINK rel="stylesheet" href="../static/styles/3-header.css">
+    <LINK rel="stylesheet" href="../static/styles/3-footer.css">
+    <LINK rel="stylesheet" href="../static/styles/6-filters.css">
+    <LINK rel="stylesheet" href="../static/styles/8-places.css">
     <LINK rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
